--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+
+.table tr.active td {  
+    background-color:#2436da !important;  
+    color: white;  
+  }  
