--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid"> 
+<div class="conteiner-fluid"> 
   <app-header></app-header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand"></a>
@@ -26,7 +26,7 @@
       </ul>
     </div>
   </nav>
-  <div class="container">
+  <div class="conteiner">
     <router-outlet></router-outlet>
   </div>
 </div>
